syntax = "proto2";

package protobuf;

option java_multiple_files = true;
option java_package = "com.gn.protobuf";
option java_outer_classname = "AddressBookProtos";

message Person {
  enum PhoneType {
    MOBILE = 0;
    HOME = 1;
    WORK = 2;
  }

  message PhoneNumber {
    optional string number = 1;
    optional PhoneType type = 2 [default = HOME];
  }

  optional string name = 1;
  optional int32 id = 2;
  optional string email = 3;
  repeated PhoneNumber phones = 4;
}

message AddressBook {
  repeated Person people = 1;
}